Fixed vertical alignment and changed hue rendering to work on ios. (I hope)

--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ html, body {
   width: 100%;
   height: 100%;
   background: #1e1e1e;
-  display: flex;
+  display: inline;
   justify-content: center;
-  align-items: center;
+  align-items:center;
+  vertical-align: top;
   height: 100vh;
 }
 
